force-app/main/default/objects/Account/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo</label>
    <length>254</length>
    <type>Text</type>
</CustomField>