force-app/main/default/objects/Account/fields/Text_fie__c.field-meta.xml
<CustomField>
    <fullName>Text_fie__c</fullName>
    <label>Text fie</label>
    <length>234</length>
    <type>Text</type>
</CustomField>