force-app/main/default/objects/Account/fields/This_is_checkbox__c.field-meta.xml
<CustomField>
    <fullName>This_is_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This is checkbox</label>
    <type>Checkbox</type>
</CustomField>