force-app/main/default/objects/Account/fields/Veer__c.field-meta.xml
<CustomField>
    <fullName>Veer__c</fullName>
    <label>Veer</label>
    <length>254</length>
    <type>Text</type>
</CustomField>